--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
+    "cls-rtracer": "^2.6.2",
+    "express-http-context": "^1.2.4",
+    "http-status": "^1.6.2",
     "mysql2": "^3.9.7",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
