--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
         "pretty": true,
         "sourceMap": true,
         "inlineSources": true,
-        "outDir": "dist",
+        "outDir": "./dist",
+        "rootDir": "./src",
         "importHelpers": true,
         "strict": true,
         "noImplicitAny": false,
@@ -17,7 +18,10 @@
         "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true,
         "moduleResolution": "node",
-        "baseUrl": ".",
+        "baseUrl": "./src",
+        "paths": {
+            "*": ["*", "./*"]
+        },
         "allowSyntheticDefaultImports": true,
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
