--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,50 +1,21 @@
 {
     "compilerOptions": {
-        "target": "ESNext",
-        "module": "CommonJS",
-        "pretty": true,
-        "sourceMap": true,
-        "inlineSources": true,
-        "outDir": "./dist",
-        "rootDir": "./src",
-        "importHelpers": true,
-        "strict": true,
-        "noImplicitAny": false,
-        "strictNullChecks": false,
-        "noImplicitThis": true,
-        "alwaysStrict": true,
-        "noUnusedLocals": false,
-        "noUnusedParameters": false,
-        "noImplicitReturns": true,
-        "noFallthroughCasesInSwitch": true,
-        "moduleResolution": "node",
-        "baseUrl": "./src",
-        "paths": {
-            "*": ["*", "./*"]
-        },
-        "allowSyntheticDefaultImports": true,
-        "experimentalDecorators": true,
+        "module": "commonjs",
+        "declaration": true,
+        "removeComments": true,
         "emitDecoratorMetadata": true,
-        "resolveJsonModule": true,
-        "esModuleInterop": true,
-        "lib": [
-            "es5",
-            "es6",
-            "dom",
-            "es2015.core",
-            "es2015.collection",
-            "es2015.generator",
-            "es2015.iterable",
-            "es2015.promise",
-            "es2015.proxy",
-            "es2015.reflect",
-            "es2015.symbol",
-            "es2015.symbol.wellknown",
-            "esnext.asynciterable"
-        ],
+        "experimentalDecorators": true,
+        "allowSyntheticDefaultImports": true,
+        "target": "ES2021",
+        "sourceMap": true,
+        "outDir": "./dist",
+        "baseUrl": "./",
+        "incremental": true,
         "skipLibCheck": true,
-        "skipDefaultLibCheck": true
-    },
-    "include": ["src/**/*"],
-    "exclude": ["node_modules", "dist", "**/*.spec.ts"]
+        "strictNullChecks": false,
+        "noImplicitAny": false,
+        "strictBindCallApply": false,
+        "forceConsistentCasingInFileNames": false,
+        "noFallthroughCasesInSwitch": false
+    }
 }
