chore: 🍱 tsconfig 변경

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,11 +11,13 @@
         "outDir": "./dist",
         "baseUrl": "./",
         "incremental": true,
+        "composite": true,
         "skipLibCheck": true,
         "strictNullChecks": false,
         "noImplicitAny": false,
         "strictBindCallApply": false,
         "forceConsistentCasingInFileNames": false,
-        "noFallthroughCasesInSwitch": false
+        "noFallthroughCasesInSwitch": false,
+        "isolatedModules": true
     }
 }
