--- a/package.json
+++ b/package.json
@@ -13,12 +13,20 @@
         "@nestjs/common": "^10.0.0",
         "@nestjs/config": "^3.2.2",
         "@nestjs/core": "^10.0.0",
+        "@nestjs/jwt": "^10.2.0",
+        "@nestjs/passport": "^10.0.3",
         "@nestjs/platform-express": "^10.0.0",
         "@nestjs/typeorm": "^10.0.2",
+        "class-transformer": "^0.5.1",
+        "class-validator": "^0.14.1",
         "cls-rtracer": "^2.6.2",
+        "cookie-parser": "^1.4.6",
         "express-http-context": "^1.2.4",
         "http-status": "^1.6.2",
         "mysql2": "^3.9.7",
+        "passport": "^0.7.0",
+        "passport-jwt": "^4.0.1",
+        "passport-kakao": "^1.0.1",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.8.1",
         "typeorm": "^0.3.20"
@@ -30,6 +38,8 @@
         "@types/express": "^4.17.17",
         "@types/jest": "^29.5.2",
         "@types/node": "^20.3.1",
+        "@types/passport-jwt": "^4.0.1",
+        "@types/passport-kakao": "^1.0.3",
         "@types/supertest": "^2.0.12",
         "@typescript-eslint/eslint-plugin": "^5.59.11",
         "@typescript-eslint/parser": "^5.59.11",
