--- a/package.json
+++ b/package.json
@@ -15,32 +15,38 @@
         "@nestjs/core": "^10.0.0",
         "@nestjs/jwt": "^10.2.0",
         "@nestjs/passport": "^10.0.3",
-        "@nestjs/platform-express": "^10.0.0",
+        "@nestjs/platform-express": "^10.3.8",
         "@nestjs/typeorm": "^10.0.2",
+        "@types/multer": "^1.4.11",
+        "aws-sdk": "^2.1632.0",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
         "cls-rtracer": "^2.6.2",
         "cookie-parser": "^1.4.6",
         "express-http-context": "^1.2.4",
         "http-status": "^1.6.2",
+        "multer": "^1.4.5-lts.1",
         "mysql2": "^3.9.7",
         "passport": "^0.7.0",
         "passport-jwt": "^4.0.1",
         "passport-kakao": "^1.0.1",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.8.1",
-        "typeorm": "^0.3.20"
+        "typeorm": "^0.3.20",
+        "uuid": "^9.0.1"
     },
     "devDependencies": {
         "@nestjs/cli": "^10.0.0",
         "@nestjs/schematics": "^10.0.0",
         "@nestjs/testing": "^10.0.0",
+        "@types/aws-sdk": "^2.7.0",
         "@types/express": "^4.17.17",
         "@types/jest": "^29.5.2",
         "@types/node": "^20.3.1",
         "@types/passport-jwt": "^4.0.1",
         "@types/passport-kakao": "^1.0.3",
         "@types/supertest": "^2.0.12",
+        "@types/uuid": "^9.0.8",
         "@typescript-eslint/eslint-plugin": "^5.59.11",
         "@typescript-eslint/parser": "^5.59.11",
         "cross-env": "^7.0.3",
