--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "test": "cross-env NODE_ENV=test TS_NODE_FILES=true mocha --exit -timeout 3000 -r tsconfig-paths/register -r ts-node/register ./test/**/*.test.ts"
     },
     "dependencies": {
+        "@aws-sdk/client-s3": "^3.617.0",
         "@nestjs/common": "^10.0.0",
         "@nestjs/config": "^3.2.2",
         "@nestjs/core": "^10.0.0",
@@ -18,7 +19,7 @@
         "@nestjs/platform-express": "^10.3.8",
         "@nestjs/typeorm": "^10.0.2",
         "@types/multer": "^1.4.11",
-        "aws-sdk": "^2.1632.0",
+        "axios": "^1.7.2",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
         "cls-rtracer": "^2.6.2",
@@ -26,6 +27,7 @@
         "express-http-context": "^1.2.4",
         "http-status": "^1.6.2",
         "multer": "^1.4.5-lts.1",
+        "multer-s3": "^3.0.1",
         "mysql2": "^3.9.7",
         "passport": "^0.7.0",
         "passport-jwt": "^4.0.1",
@@ -39,9 +41,10 @@
         "@nestjs/cli": "^10.0.0",
         "@nestjs/schematics": "^10.0.0",
         "@nestjs/testing": "^10.0.0",
-        "@types/aws-sdk": "^2.7.0",
+        "@types/axios": "^0.14.0",
         "@types/express": "^4.17.17",
         "@types/jest": "^29.5.2",
+        "@types/multer-s3": "^3.0.3",
         "@types/node": "^20.3.1",
         "@types/passport-jwt": "^4.0.1",
         "@types/passport-kakao": "^1.0.3",
