--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
         "strictBindCallApply": false,
         "forceConsistentCasingInFileNames": false,
         "noFallthroughCasesInSwitch": false,
-        "isolatedModules": true
+        "isolatedModules": true,
+        "esModuleInterop": true
     }
 }
