--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "dependencies": {
         "@aws-sdk/client-s3": "^3.617.0",
         "@nestjs/common": "^10.0.0",
-        "@nestjs/config": "^3.2.2",
+        "@nestjs/config": "^3.3.0",
         "@nestjs/core": "^10.0.0",
         "@nestjs/jwt": "^10.2.0",
         "@nestjs/passport": "^10.0.3",
         "@nestjs/platform-express": "^10.3.8",
         "@nestjs/typeorm": "^10.0.2",
         "@types/multer": "^1.4.11",
-        "axios": "^1.7.2",
+        "axios": "^1.7.7",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
         "cls-rtracer": "^2.6.2",
@@ -29,6 +29,7 @@
         "multer": "^1.4.5-lts.1",
         "multer-s3": "^3.0.1",
         "mysql2": "^3.9.7",
+        "openai": "^4.68.2",
         "passport": "^0.7.0",
         "passport-jwt": "^4.0.1",
         "passport-kakao": "^1.0.1",
